review with Susan

--- a/bundles/org.eclipse.jdt.doc.user/gettingStarted/qs-11.htm
+++ b/bundles/org.eclipse.jdt.doc.user/gettingStarted/qs-11.htm
@@ -13,21 +13,14 @@
 Searching the Workbench</h1>
 
 <div CLASS="Para">In this section, you will search the workbench for Java
-elements.</div>
+elements.
+<br>&nbsp;</div>
 
-<div CLASS="Para">In the Search dialog, you can perform text searches and
-Java searches.</div>
-
-<ul CLASS="UnorderedList">
-<li CLASS="Item">
-Java searching are faster than text searching as they are indexed.</li>
-
-<li CLASS="Item">
-Text searches are less precise and operate on simple pattern matching.</li>
-
-<li CLASS="Item">
-Text searches can find matches inside comments and strings</li>
-</ul>
+<div CLASS="Para">In the Search dialog, you can perform file, text or Java
+searches.&nbsp; Java searches operate on the structure of the code. With
+File Search you can search files by name and/or text content.&nbsp; Indexing
+makes Java searches faster, while searches on text content will allow you
+to find matches inside comments and strings.</div>
 
 <div CLASS="Topic">
 <h2>
@@ -73,9 +66,9 @@ area, select&nbsp;<span CLASS="Label">References</span>.
 
 <div CLASS="Snapshot"><img SRC="../images/qs-47.gif" NOSAVE height=387 width=488></div>
 
-<div CLASS="Para">Then click&nbsp;<span CLASS="Label">Search</span>. Notice
-that in the search progress dialog, you can click&nbsp;<span CLASS="Label">Cancel</span>
-at any point while searching to stop the search.</div>
+<div CLASS="Para">Then click&nbsp;<span CLASS="Label">Search</span>. While
+searching&nbsp; you may click&nbsp;<span CLASS="Label">Cancel</span> at
+any time to stop the search. Partial results will be shown.</div>
 </td>
 </tr>
 
@@ -117,8 +110,8 @@ match. Search matches are tagged with a search marker in the marker bar.</div>
 <h2>
 From a Java View</h2>
 
-<div CLASS="Para">You can conduct a Java search from many views, such as
-the Outline, Hierarchy, or Package Explorer.</div>
+<div CLASS="Para">Java searches can be performed from several views, including
+the Outline, Hierarchy view or the Package Explorer.</div>
 
 <table BORDER=0 CELLSPACING=0 CELLPADDING=3 >
 <caption><THEAD></THEAD><TBODY>
@@ -154,8 +147,8 @@ and from its context menu, select References > Workspace.</div>
 <h2>
 From an Editor</h2>
 
-<div CLASS="Para">In the Package Explorer, double-click&nbsp;<span CLASS="Filename">junit.framework.TestCase.java</span>
-to open it in an editor. In the editor, select the class name&nbsp;<span CLASS="Filename">TestCase</span>
+<div CLASS="Para">From the Package Explorer, open&nbsp;<span CLASS="Filename">junit.framework.TestCase.java</span>.
+In the editor, select the class name&nbsp;<span CLASS="Filename">TestCase</span>
 and from the context menu, select Search > References > Workspace.</div>
 
 <div CLASS="Figure"><img SRC="../images/qs-52.gif" NOSAVE height=468 width=598>
@@ -167,10 +160,9 @@ and from the context menu, select Search > References > Workspace.</div>
 <h2>
 From the Search View</h2>
 
-<div CLASS="Para">The Search Results view shows now the results for the
-TestCase search. Select a search result and open the context menu. You
-can continue searching for&nbsp;<span CLASS="Label">References</span> or&nbsp;<span CLASS="Label">Declarations</span>
-of the selected element.</div>
+<div CLASS="Para">The Search Results view shows the results for the TestCase
+search. Select a search result and open the context menu. You can continue
+searching the selected element's references and declarations.</div>
 
 <div CLASS="Figure"><img SRC="../images/qs-53.gif" NOSAVE height=312 width=451>
 <div CLASS="FigureTitle">&nbsp;</div>
@@ -179,9 +171,9 @@ of the selected element.</div>
 
 <div CLASS="Topic">
 <h2>
-Performing a Text Search</h2>
+Performing a File Search</h2>
 
-<table BORDER=0 CELLSPACING=0 CELLPADDING=3 >
+<table BORDER=0 CELLSPACING=0 CELLPADDING=3 WIDTH="97%" >
 <caption><THEAD></THEAD><TBODY>
 <br></TBODY></caption>
 
@@ -202,7 +194,7 @@ button in the workbench toolbar or select Search > File from the menu bar.</div>
 </td>
 
 <td ALIGN=LEFT VALIGN=TOP>
-<div CLASS="Para">If it is not already selected select the&nbsp;<span CLASS="Label">Text
+<div CLASS="Para">If it is not already selected, select the&nbsp;<span CLASS="Label">File
 Search</span> tab.</div>
 </td>
 </tr>
@@ -223,15 +215,11 @@ The Scope should be set to&nbsp;<span CLASS="Filename">Workspace</span>.
 </td>
 </tr>
 
-<tr>
-<td ALIGN=LEFT VALIGN=TOP>
-<div CLASS="Para"><b>4.</b></div>
-</td>
+<tr VALIGN=TOP>
+<td><b>4.</b></td>
 
-<td ALIGN=LEFT VALIGN=TOP>
-<div CLASS="Para">Notice that the search results list displays the file
-that contains each match.</div>
-</td>
+<td>To find all files with a given file name pattern, leave the Containing
+Text field empty.</td>
 </tr>
 </table>
 </div>
@@ -241,17 +229,17 @@ that contains each match.</div>
 Viewing Previous Search Results</h2>
 
 <div CLASS="Para">In the Search Results view, click the arrow next to the&nbsp;<span CLASS="Label">Previous
-Search Results</span> button to see a menu containing the list of most
-recently conducted searches. The list can be cleared by invoking&nbsp;<span CLASS="Label">Clear
+Search Results</span> button to see a menu containing the list of the most
+recent searches. The list can be cleared by invoking&nbsp;<span CLASS="Label">Clear
 History</span> from this menu.</div>
 
 <div CLASS="Figure"><img SRC="../images/qs-55.gif" NOSAVE height=249 width=669>
 <div CLASS="FigureTitle">&nbsp;</div>
 </div>
 
-<div CLASS="Para">You can also click on the&nbsp;<span CLASS="Label">Previous
-Search Results</span> button to bring up a dialog displaying the list of
-all previous searches.</div>
+<div CLASS="Para">The&nbsp;<span CLASS="Label">Previous Search Results</span>
+button will display a dialog with the list of all previous searches from
+the current session.</div>
 
 <div CLASS="Figure"><img SRC="../images/qs-56.gif" NOSAVE height=327 width=319>
 <div CLASS="FigureTitle">&nbsp;</div>
