--- a/bundles/org.eclipse.jdt.doc.user/gettingStarted/qs-8.htm
+++ b/bundles/org.eclipse.jdt.doc.user/gettingStarted/qs-8.htm
@@ -52,7 +52,7 @@ without changing its semantic behavior.</div>
 <td ALIGN=LEFT VALIGN=TOP>
 <div CLASS="Para">In the&nbsp;<span CLASS="Label">Enter New Name</span>
 field in the Rename Compilation Unit dialog, type "<span CLASS="Filename">
-MyTestCase.java</span> ", then click&nbsp;<span CLASS="Label">Next</span>.</div>
+MyTestCase</span> ", then click&nbsp;<span CLASS="Label">Next</span>.</div>
 
 <div CLASS="Snapshot"><img SRC="../images/qs-38.gif" NOSAVE height=331 width=608></div>
 </td>
@@ -68,10 +68,10 @@ MyTestCase.java</span> ", then click&nbsp;<span CLASS="Label">Next</span>.</div>
 you with a preview of the changes that would take place if you actually
 choose to rename this resource.&nbsp;</div>
 
-
-<p CLASS="Para">Renaming a compilation unit invalidates import statements
+<div CLASS="Para">Renaming a compilation unit invalidates import statements
 in other compilation units; therefore, a simple rename operation is not
-sufficient in this case and would result in compile errors.&nbsp;
+sufficient in this case and would result in compile errors.&nbsp;</div>
+
 <div CLASS="Snapshot"><img SRC="../images/qs-39.gif" NOSAVE height=509 width=608></div>
 </td>
 </tr>
