--- a/bundles/org.eclipse.jdt.doc.user/gettingStarted/qs-9.htm
+++ b/bundles/org.eclipse.jdt.doc.user/gettingStarted/qs-9.htm
@@ -88,9 +88,9 @@ next to the&nbsp;<span CLASS="Label">Superclass</span> field.</div>
 </td>
 
 <td ALIGN=LEFT VALIGN=TOP>
-<div CLASS="Para">In the&nbsp;<span CLASS="Label">Choose a type&nbsp;</span>field
-in the Superclass Selection dialog, type&nbsp;<span CLASS="Filename">Test</span>
-to narrow the list of available superclasses for the new class.</div>
+<div CLASS="Para">In the&nbsp;<span CLASS="Label">Choose a type</span>
+field in the Superclass Selection dialog, type&nbsp;<span CLASS="Filename">Test</span>
+to narrow the list of available superclasses.</div>
 
 <div CLASS="Snapshot"><img SRC="../images/qs-42.gif" NOSAVE height=468 width=296></div>
 </td>
@@ -156,8 +156,8 @@ Open the context menu and select&nbsp;<span CLASS="Label">Override Methods...</s
 <td><b>12.</b></td>
 
 <td>In the Override Methods dialog, check 'setUp()' and 'tearDown()' and
-click&nbsp;<span CLASS="Label">OK</span>. Two methods are added in the
-editor.
+click&nbsp;<span CLASS="Label">OK</span>. Two methods are added to the
+class.
 <br><img SRC="../images/qs-43b.gif" NOSAVE height=447 width=211></td>
 </tr>
 
@@ -170,8 +170,8 @@ editor.
 <tr VALIGN=TOP>
 <td><b>14.</b></td>
 
-<td>container is marked with the temporary problem line as it is not defined
-yet. A light bulb shows up on the left side of the editor.
+<td>container and Vector are underlined with a problem highlight line as
+they cannot be resolved. A light bulb appears on the marker bar.
 <br>Set the cursor inside 'Vector' and&nbsp; press CTRL + 1 (or use Edit
 > Quick Fix from the menu bar).
 <br>Choose 'Import java.util.Vector'. This adds the missing import declaration.
@@ -193,8 +193,8 @@ and Setter...</span>.
 <tr VALIGN=TOP>
 <td><b>16.</b></td>
 
-<td>The Generate Getter and Setter dialog suggests to create methods getContainer
-and setContainer. Check both and click&nbsp;<span CLASS="Label">OK</span>.
+<td>The Generate Getter and Setter dialog suggests creating the methods
+getContainer and setContainer. Select both and click&nbsp;<span CLASS="Label">OK</span>.
 A Getter and Setter for the field container are added.
 <br><img SRC="../images/qs-43f.gif" NOSAVE height=405 width=276></td>
 </tr>
@@ -209,7 +209,7 @@ A Getter and Setter for the field container are added.
 <td><b>18.</b></td>
 
 <td>The formatting of generated code can be configured in Window > Preferences
-> Java > Code Formatter
+> Java > Code Formatter.
 <br>If you use a prefix or suffix for field names (e.g. fContainer), you
 can specify this in Window > Preferences > Java > Code Generation so that
 the Generate Getter and Setter action will suggest method names without
