--- a/bundles/org.eclipse.jdt.doc.user/gettingStarted/qs-10.htm
+++ b/bundles/org.eclipse.jdt.doc.user/gettingStarted/qs-10.htm
@@ -27,7 +27,7 @@ packages.</div>
 
 <td ALIGN=LEFT VALIGN=TOP>
 <div CLASS="Para">In the Package Explorer, select the&nbsp;<span CLASS="Filename">MyTestCase.java</span>
-file and drag it into to the&nbsp;<span CLASS="Filename">junit.framework</span>
+file and drag it into the&nbsp;<span CLASS="Filename">junit.framework</span>
 package. The file is moved, and its package declaration changes to reflect
 the new location.</div>
 
@@ -42,7 +42,7 @@ the new location.</div>
 
 <td ALIGN=LEFT VALIGN=TOP>
 <div CLASS="Para">Select the&nbsp;<span CLASS="Filename">MyTestCase.java</span>
-file and drag it into to the root directory of the JUnit project. A default
+file and drag it into the root directory of the JUnit project. A default
 package is created to contain the class, and the package declaration is
 removed to reflect its new location.</div>
 
@@ -56,18 +56,16 @@ removed to reflect its new location.</div>
 </td>
 
 <td ALIGN=LEFT VALIGN=TOP>
-<div CLASS="Para">Select the&nbsp;<span CLASS="Filename">MyTestCase.java</span>
-file and from its context menu, select Refactor > Move. In the Move dialog,
-expand the hierarchy to browse the possible new locations for the resource.&nbsp;</div>
+<div CLASS="Para">Using the context menu is an alternative to drag and
+drop:
+<br>Select the&nbsp;<span CLASS="Filename">MyTestCase.java</span> file
+and from its context menu, select Refactor > Move. In the Move dialog,
+expand the hierarchy to browse the possible new locations for the resource.
+Select the&nbsp;<span CLASS="Filename">junit.framework</span> package,
+then click&nbsp;<span CLASS="Label">OK</span>. The class is moved, and
+its package declaration is updated to the new location.</div>
 
 <div CLASS="Snapshot"><img SRC="../images/qs-46.gif" NOSAVE height=415 width=346></div>
-
-<div CLASS="Para">Using the context menu option is simply an alternative
-to drag and drop.</div>
-
-<div CLASS="Para">Select the&nbsp;<span CLASS="Filename">junit.framework</span>
-package, then click&nbsp;<span CLASS="Label">OK</span>. The class is moved,
-and the package declaration changes to reflect its new location.</div>
 
 <div CLASS="Note">
 <div CLASS="Para">Note: This example did not result in compile errors.
