--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-90.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-90.htm
@@ -15,12 +15,14 @@ Renaming a package</h1>
 <div CLASS="Para">To rename a package:</div>
 
 <ol>
-<div CLASS="Para">In the Package Explorer or Package Explorer view, select the
-package that you want to rename.</div>
-
-<div CLASS="Para">From the view's pop-up menu, select&nbsp;<span CLASS="Label"><b>Rename</span></b>.</div>
+  <li> 
+    <div CLASS="Para">In the Package Explorer or Package Explorer view, select 
+      the package that you want to rename.</div>
+  </li>
+  <li>
+    <div CLASS="Para">From the view's pop-up menu, select&nbsp;<span CLASS="Label"><b>Rename</b></span>.</div>
+  </li>
 </ol>
-
 <div CLASS="Para">This updates all import statements of any affected compilation
 units and all fully qualified references to types declared in the renamed
 package..</div>
