--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-92.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-92.htm
@@ -15,12 +15,14 @@ Renaming a compilation unit</h1>
 <div CLASS="Para">To rename a compilation unit:</div>
 
 <ol>
-<div CLASS="Para">In the Package Explorer view, select the compilation
-unit you want to rename.</div>
-
-<div CLASS="Para">From the view's pop-up menu, select&nbsp;<span CLASS="Label"><b>Rename</span></b>.</div>
+  <li> 
+    <div CLASS="Para">In the Package Explorer view, select the compilation unit 
+      you want to rename.</div>
+  </li>
+  <li>
+    <div CLASS="Para">From the view's pop-up menu, select&nbsp;<span CLASS="Label"><b>Rename</b></span>.</div>
+  </li>
 </ol>
-
 <div CLASS="Para">Renaming a compilation unit also renames (and updates
 all references to) the top-level type that has the same name as the compilation
 unit. For example, renaming a compilation unit&nbsp;<span CLASS="Filename">A.java</span>
