--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-96.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-96.htm
@@ -16,28 +16,20 @@ Renaming a method</h1>
 in the compilation unit in which it is declared. However, if you also want
 to update all references to it, you must either:</div>
 
-<ul CLASS="UnorderedList">
-<li CLASS="Item">
-In the Package Explorer view, go to the compilation unit where the method
-is declared, and double-click it to open it in the editor.</li>
-
-<li CLASS="Item">
-Select the method in the Outline view, from its pop-up menu, select <b>Refactor</b>
-> <b>Rename</b>.</li>
-</ul>
-
+<ol>
+  <li> In the Package Explorer view, go to the compilation unit where the method 
+    is declared, and double-click it to open it in the editor.</li>
+  <li> Select the method in the Outline view, from its pop-up menu, select <b>Refactor</b> 
+    > <b>Rename</b>.</li>
+</ol>
 <div CLASS="Item">or</div>
 
-<ul CLASS="UnorderedList">
-<li CLASS="Item">
-In the Package Explorer view, go to the compilation unit where the method
-is declared, and double-click it to open it in the editor.</li>
-
-<li CLASS="Item">
-Select the method in the Outline view and select <b>Refactor > Rename</b>
-from the menu bar.</li>
-</ul>
-
+<ol>
+  <li> In the Package Explorer view, go to the compilation unit where the method 
+    is declared, and double-click it to open it in the editor.</li>
+  <li> Select the method in the Outline view and select <b>Refactor > Rename</b> 
+    from the menu bar.</li>
+</ol>
 <div CLASS="Item"><b>Note 1:</b>&nbsp; Renaming a method declared in an
 interface also renames (and updates all references to) all methods that
 are implementations of that method</div>
