- Corrected doctype and copyrights - Spell checked

--- a/bundles/org.eclipse.jdt.doc.user/concepts/concepts-3.htm
+++ b/bundles/org.eclipse.jdt.doc.user/concepts/concepts-3.htm
@@ -1,4 +1,4 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0//EN">
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><HTML>
 <head>
 <LINK REL="STYLESHEET" HREF="../book.css" CHARSET="ISO-8859-1" TYPE="text/css">
 </head>
@@ -46,11 +46,11 @@ container</a><br>
 <a href="..\tasks\tasks-57.htm">Generating accessors</a><br>
 <a href="..\tasks\tasks-12.htm">Organizing Java projects</a><br>
 <a href="..\tasks\tasks-128.htm">Setting the launcher for a project</a></p>
-
-<p>&nbsp;<br>
-<img border=0 width=195 height=12 id="_x0000_i1027" src="..\images\ngibmcpy.gif"></p>
-
 </div>
+
+<p><br>
+<p>&nbsp;<a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0"></a>
+</p>
 
 </body>
 
