--- a/bundles/org.eclipse.jdt.doc.user/concepts/concepts-4.htm
+++ b/bundles/org.eclipse.jdt.doc.user/concepts/concepts-4.htm
@@ -1,4 +1,4 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0//EN"><HTML>
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><HTML>
 <HEAD>
 <META HTTP-EQUIV="Content-Type" CONTENT="text/html; charset=ISO-8859-1">
 <META HTTP-EQUIV="Content-Style-Type" CONTENT="text/css">
@@ -38,19 +38,9 @@ errors and warnings</a><br>
 <a href="../tasks/tasks-110.htm">Working with build 
 paths</a></p>
 
-
-
-
-
-<P><br>
-
-<img src = ../images/ngibmcpy.gif width="195" height="12">
-
-</P>
-
-
-
-
+<p><br>
+<p>&nbsp;<a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0"></a>
+</p>
 
 </BODY>
 </HTML>
