--- a/bundles/org.eclipse.jdt.doc.user/concepts/concepts-1.htm
+++ b/bundles/org.eclipse.jdt.doc.user/concepts/concepts-1.htm
@@ -1,5 +1,4 @@
-<!doctype html public "-//w3c//dtd html 4.0 transitional//en">
-<html>
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><HTML>
 <head>
 	<LINK REL="STYLESHEET" HREF="../book.css" CHARSET="ISO-8859-1" TYPE="text/css">
    <title> Java development tools (JDT) </title>
@@ -37,7 +36,11 @@ to the workbench that enable Java development.</div>
 <br><a href="..\reference\ref-152.htm">Frequently asked questions on JDT</a>
 <br><a href="..\reference\ref-155.htm">JDT glossary</a>
 <br>&nbsp;
-<p><img SRC="..\images\ngibmcpy.gif" BORDER=0 id="_x0000_i1028" height=12 width=195></div>
+</div>
+
+<p><br>
+<p>&nbsp;<a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0"></a>
+</p>
 
 </body>
 </html>
