--- a/bundles/org.eclipse.jdt.doc.user/concepts/concepts-5.htm
+++ b/bundles/org.eclipse.jdt.doc.user/concepts/concepts-5.htm
@@ -1,4 +1,4 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0//EN">
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><HTML>
 <head>
 <LINK REL="STYLESHEET" HREF="../book.css" CHARSET="ISO-8859-1" TYPE="text/css">
 </head>
@@ -41,7 +41,7 @@ of the following views:</p>
 
 <ul style='margin-top:0in' type=disc>
  <li class=MsoNormal style='color:black;mso-list:l1 level1 lfo1;tab-stops:list .5in'><span
-     style='font-size:10.0pt;font-family:Arial'>Projectes<o:p></o:p></span></li>
+     style='font-size:10.0pt;font-family:Arial'>Projects<o:p></o:p></span></li>
  <li class=MsoNormal style='color:black;mso-list:l1 level1 lfo1;tab-stops:list .5in'><span
      style='font-size:10.0pt;font-family:Arial'>Packages<o:p></o:p></span></li>
  <li class=MsoNormal style='color:black;mso-list:l1 level1 lfo1;tab-stops:list .5in'><span
@@ -103,11 +103,11 @@ src="..\images\ngrelr.gif" alt="Related reference"></p>
 <a href="..\reference\ref-90.htm">Package Explorer view</a><br>
 <a href="..\reference\ref-66.htm">Processes view</a><br>
 <a href="..\reference\ref-74.htm">Variables view</a></p>
+</div>
 
 <p><br>
-<img border=0 width=195 height=12 id="_x0000_i1028" src="..\images\ngibmcpy.gif"></p>
-
-</div>
+<p>&nbsp;<a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0"></a>
+</p>
 
 </body>
 
