--- a/bundles/org.eclipse.jdt.doc.user/concepts/concepts-8.htm
+++ b/bundles/org.eclipse.jdt.doc.user/concepts/concepts-8.htm
@@ -1,4 +1,4 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0//EN">
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><HTML>
 <head>
 <LINK REL="STYLESHEET" HREF="../book.css" CHARSET="ISO-8859-1" TYPE="text/css">
 </head>
@@ -97,10 +97,11 @@ src="..\images\ngrelt.gif" alt="Related tasks"></p>
 
 <p><a href="..\tasks\tasks-79.htm">Searching Java code</a></p>
 
-<p>&nbsp;<br>
-<img border=0 width=195 height=12 id="_x0000_i1027" src="..\images\ngibmcpy.gif"></p>
-
 </div>
+
+<p><br>
+<p>&nbsp;<a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0"></a>
+</p>
 
 </body>
 
