--- a/bundles/org.eclipse.platform.doc.user/concepts/concepts-10.htm
+++ b/bundles/org.eclipse.platform.doc.user/concepts/concepts-10.htm
@@ -16,7 +16,7 @@ window title bar.&nbsp;The
 workbench menubar and toolbar contain operations that are applicable to the
 active editor.</P>
 <P CLASS="Para" Label=Type>
-Any number of editors can be open at once, editor can be active at any one time.&nbsp;The
+Any number of editors can be open at once, only one editor can be active at any one time.&nbsp;The
 same is true for views.&nbsp; The choice of active editor determines the menu
 and toolbar contributions.</P>
 <P CLASS="Para" Label=Type>
