--- a/bundles/org.eclipse.platform.doc.user/concepts/concepts-17.htm
+++ b/bundles/org.eclipse.platform.doc.user/concepts/concepts-17.htm
@@ -20,7 +20,7 @@ resources that are stored and displayed in a hierarchical structure.</p>
   <dt>Child resource</dt>
   <dd>Any resource that is contained within another resource. Only files and folders can be child resources.</dd>
 </dl>
-<P>Resource hierarchies are displayed in the Navigator view, which one of the
+<P>Resource hierarchies are displayed in the Navigator view, which is one of the
 default views in the Resource perspective.
 </P>
 
