--- a/bundles/org.eclipse.platform.doc.user/concepts/cbookmrk.htm
+++ b/bundles/org.eclipse.platform.doc.user/concepts/cbookmrk.htm
@@ -13,7 +13,7 @@
 <P CLASS="Para">You can place an &quot;anchor&quot; either on a resource within
 the workbench, or at a specific line within a file, by creating a bookmark. Then
 you can use the Bookmarks view to return to those files quickly.</P>
-<P CLASS="Para">The Bookmarks&nbsp; view (<b>Perspective &gt; Show View &gt;
+<P CLASS="Para">The Bookmarks&nbsp; view (<b>Window &gt; Show View &gt;
 Bookmarks</b>) displays all bookmarks&nbsp; that you have created.&nbsp;</P>
 
 <p><img border="0" src="../images/ngrelc.gif" alt="Related concepts" width="159" height="27"><br>
@@ -30,6 +30,7 @@ Associating a task with an editable resource</a></p>
 <p>&nbsp;<br>
 <a href="../hglegal2002.htm"><img src = "../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation and others 2000, 2002" border="0"></a>
 </p>
+
 
 </BODY>
 </HTML>
