--- a/bundles/org.eclipse.platform.doc.user/concepts/cnav.htm
+++ b/bundles/org.eclipse.platform.doc.user/concepts/cnav.htm
@@ -25,7 +25,7 @@ stream. To see a description of what each menu item does, move the mouse pointer
 to that menu item and press F1.&nbsp;</P>
 <P CLASS="Para">
 By default, the Navigator view is included in the Resources perspective. To add it
-to the current perspective, click <b>Perspective &gt; Show View &gt; Basic &gt;
+to the current perspective, click <b>Window &gt; Show View &gt; Basic &gt;
 Navigator</b>.</P>
 <h2>
 Toolbar</h2>
