--- a/bundles/org.eclipse.jdt.doc.user/gettingStarted/qs-14.htm
+++ b/bundles/org.eclipse.jdt.doc.user/gettingStarted/qs-14.htm
@@ -44,7 +44,7 @@ Select the text you just typed, and from its context menu, select <SPAN CLASS="L
 Display (or the equivalent item in the Display view toolbar or Run menu)</SPAN>.</P>
 <DIV CLASS="Snapshot">
 <DIV>
-<IMG SRC="../images/qs-74.gif" width="275" height="115">
+<IMG SRC="../images/qs-74.gif">
 </DIV>
 </DIV>
 </TD>
@@ -60,7 +60,7 @@ Display (or the equivalent item in the Display view toolbar or Run menu)</SPAN>.
 The expression is evaluated.</P>
 <DIV CLASS="Snapshot">
 <DIV>
-<IMG SRC="../images/qs-75.gif" width="273" height="117">
+<IMG SRC="../images/qs-75.gif">
 </DIV>
 </DIV>
 </TD>
@@ -102,7 +102,7 @@ Inspect</SPAN>
 The Expressions view opens with the value of the evaluated expression.</P>
 <DIV CLASS="Snapshot">
 <DIV>
-<IMG SRC="../images/qs-76.gif" width="371" height="156">
+<IMG SRC="../images/qs-76.gif">
 </DIV>
 </DIV>
 </TD>
