*** empty log message ***

--- a/bundles/org.eclipse.platform.doc.user/concepts/concepts-27c.htm
+++ b/bundles/org.eclipse.platform.doc.user/concepts/concepts-27c.htm
@@ -4,11 +4,11 @@
 <META HTTP-EQUIV="Content-Style-Type" CONTENT="text/css">
 
 <LINK REL="STYLESHEET" HREF="../book.css" CHARSET="ISO-8859-1" TYPE="text/css">
-<title>Repositories</title>
+<title>CVS Repositories</title>
 <meta name="keyword" content="team">
 </HEAD>
 <BODY BGCOLOR="#ffffff">
-<H1 CLASS="Head"> Repositories</H1>
+<H1 CLASS="Head">CVS Repositories</H1>
 <P CLASS="Intro">
 <P CLASS="Para"> A Concurrent Versions System (CVS) repository is a persistent 
   data store that coordinates multi-user access to projects and their contents. 
