--- a/bundles/org.eclipse.platform.doc.user/tasks/tasks-110.htm
+++ b/bundles/org.eclipse.platform.doc.user/tasks/tasks-110.htm
@@ -39,19 +39,21 @@
   <li> Click <b>OK</b> to add the remembered tags to the selected repository location 
     or project.</li>
 </ol>
-<p><img border="0" src="../images/ngrelc.gif" alt="Related concepts" width="159" height="27"><br>
-<a href="../concepts/concepts-26.htm">Team programming</a> &nbsp;<a href="../concepts/concepts-27c.htm"><br>
-Repositories</a><a href="../concepts/concepts-27b.htm"><br>
-Streams</a><a href="../reference/ref-51a.htm"><br>
-</a><a href="../concepts/concepts-30.htm">
-Team synchronization</a>&nbsp;</p>
+
+<p><img border="0" src="../images/ngrelc.gif" alt="Related concepts" width="159" height="27">
+<br><a href="../concepts/concepts-26.htm">Team programming with CVS</a>
+<br><a href="../concepts/concepts-27c.htm">CVS Repositories</a>
+<br><a href="../concepts/concepts-27b.htm">Branches</a>
+<br><a href="../concepts/concepts-27.htm">Versions</a>
+<br><a href="../concepts/concepts-30.htm">Synchronizing with a CVS repository</a>
+</p>
 
 
-<p><img border="0" src="../images/ngrelt.gif" alt="Related tasks" width="159" height="27"><a href="tasks-92.htm"><br>
-Creating a repository location</a><a href="tasks-96.htm"><br>
-Adding resources from a repository to the workbench</a>&nbsp;<a href="tasks-111.htm"><br>
-Creating a new stream</a><a href="tasks-117.htm"><br>
-Associating a project with a stream</a>
+<p><img border="0" src="../images/ngrelt.gif" alt="Related tasks" width="159" height="27">
+<br><a href="tasks-92.htm">Creating a CVS repository location</a>
+<br><a href="tasks-96.htm">Checking out a project from a CVS repository</a>
+<br><a href="tasks-111.htm">Defining a branch tag</a>
+<br><a href="tasks-117.htm">Sharing a new project using CVS</a>
 </p>
 
 <p>&nbsp;<br>
