--- a/bundles/org.eclipse.platform.doc.user/tasks/tasks-117.htm
+++ b/bundles/org.eclipse.platform.doc.user/tasks/tasks-117.htm
@@ -45,30 +45,28 @@
 </ol>
 
 
-<p><img border="0" src="../images/ngrelc.gif" alt="Related concepts" width="159" height="27"><br>
-<a href="../concepts/concepts-26.htm">Team programming</a> &nbsp;<a href="../concepts/concepts-27b.htm"><br>
-Streams</a><a href="../reference/ref-51a.htm"><br>
-</a><a href="../concepts/concepts-30.htm">
-Team synchronization</a>&nbsp;</p>
-
-
-<p><img border="0" src="../images/ngrelt.gif" alt="Related tasks" width="159" height="27"><a href="tasks-92.htm"><br>
-</a><a href="tasks-96.htm">
-Adding resources from a repository to the workbench</a>&nbsp;<a href="tasks-103.htm"><br>
-Replacing resources with a repository
-        version</a><a href="tasks-111.htm"><br>
-Creating a new stream</a><a href="tasks-100a.htm"><br>
-Splitting from a stream</a><a href="tasks-115.htm"><br>
-Synchronizing with a stream</a><a href="tasks-113.htm"><br>
-Catching up</a><a href="tasks-113b.htm"><br>
-Resolving conflicts and merging changes</a><a href="tasks-100b.htm"><br>
-Merging from a stream</a>
+<p><img border="0" src="../images/ngrelc.gif" alt="Related concepts" width="159" height="27">
+<br><a href="../concepts/concepts-26.htm">Team programming with CVS</a>
+<br><a href="../concepts/concepts-27b.htm">Branches</a>
+<br><a href="../concepts/concepts-30.htm">Synchronizing with a CVS repository</a>
 </p>
 
 
-<p><img border="0" src="../images/ngrelr.gif" alt="Related reference" width="159" height="27"><a href="../reference/ref-48b.htm"><br>
-</a><a href="../reference/ref-51a.htm">
-Streams in CVS</a>
+<p><img border="0" src="../images/ngrelt.gif" alt="Related tasks" width="159" height="27">
+<br><a href="tasks-117a.htm">Sharing an imported CVS project</a>
+<br><a href="tasks-96.htm">Checking out a project from a CVS repository</a>
+<br><a href="tasks-103.htm">Replacing resources with a repository version</a>
+<br><a href="tasks-110.htm">Discovering branch and version tags</a>
+<br><a href="tasks-100a.htm">Splitting from a stream</a>
+<br><a href="tasks-115.htm">Synchronizing with a stream</a>
+<br><a href="tasks-113.htm">Catching up</a>
+<br><a href="tasks-113b.htm">Resolving conflicts and merging changes</a>
+<br><a href="tasks-100b.htm">Merging from a stream</a>
+</p>
+
+
+<p><img border="0" src="../images/ngrelr.gif" alt="Related reference" width="159" height="27">
+<br><a href="../reference/ref-51a.htm">CVS</a>
 </p>
 
 <p>&nbsp;<br>
