--- a/bundles/org.eclipse.platform.doc.user/tasks/tasks-117a.htm
+++ b/bundles/org.eclipse.platform.doc.user/tasks/tasks-117a.htm
@@ -32,30 +32,19 @@
 </ol>
 
 
-<p><img border="0" src="../images/ngrelc.gif" alt="Related concepts" width="159" height="27"><br>
-<a href="../concepts/concepts-26.htm">Team programming</a> &nbsp;<a href="../concepts/concepts-27b.htm"><br>
-Streams</a><a href="../reference/ref-51a.htm"><br>
-</a><a href="../concepts/concepts-30.htm">
-Team synchronization</a>&nbsp;</p>
-
-
-<p><img border="0" src="../images/ngrelt.gif" alt="Related tasks" width="159" height="27">
-<a href="tasks-92.htm"><br>
-Creating a CVS repository location</a><a href="tasks-96.htm"><br>
-Checking out a project from a CVS repository</a><a href="tasks-103.htm"><br>
-Replacing resources with a repository version</a><a href="tasks-111.htm"><br>
-Defining a branch tag</a><a href="tasks-100a.htm"><br>
-Splitting from a stream</a><a href="tasks-115.htm"><br>
-Synchronizing with the repository</a><a href="tasks-113.htm"><br>
-Catching up</a><a href="tasks-113b.htm"><br>
-Resolving conflicts and merging changes</a><a href="tasks-100b.htm"><br>
-Merging from a branch</a>
+<p><img border="0" src="../images/ngrelc.gif" alt="Related concepts" width="159" height="27">
+<br><a href="../concepts/concepts-26.htm">Team programming with CVS</a>
+<br><a href="../concepts/concepts-30.htm">Synchronizing with a CVS repository</a>
 </p>
 
 
-<p><img border="0" src="../images/ngrelr.gif" alt="Related reference" width="159" height="27"><a href="../reference/ref-48b.htm"><br>
-</a><a href="../reference/ref-51a.htm">
-Streams in CVS</a>
+<p><img border="0" src="../images/ngrelt.gif" alt="Related tasks" width="159" height="27">
+<br><a href="tasks-117.htm">Sharing a new project using CVS</a>
+</p>
+
+
+<p><img border="0" src="../images/ngrelr.gif" alt="Related reference" width="159" height="27">
+<br><a href="../reference/ref-51a.htm">CVS</a>
 </p>
 
 <p>&nbsp;<br>
