--- a/bundles/org.eclipse.platform.doc.user/tasks/tasks-92.htm
+++ b/bundles/org.eclipse.platform.doc.user/tasks/tasks-92.htm
@@ -56,18 +56,17 @@ To create a new repository location:</P>
   <li> Click <b>Finish</b>. The repository location is created. </li>
 </ol>
 
-<p><img border="0" src="../images/ngrelc.gif" alt="Related concepts" width="159" height="27"><br>
-<a href="../concepts/concepts-26.htm">Team programming</a> &nbsp;<a href="../concepts/concepts-27c.htm"><br>
-Repositories</a><a href="../concepts/concepts-27v.htm"><br>
-Repositories view</a></p>
+<p><img border="0" src="../images/ngrelc.gif" alt="Related concepts" width="159" height="27">
+<br><a href="../concepts/concepts-26.htm">Team programming with CVS</a>
+<br><a href="../concepts/concepts-27c.htm">CVS Repositories</a>
+<br><a href="../concepts/concepts-27v.htm">CVS Repositories view</a></p>
 
 
-<p><img border="0" src="../images/ngrelt.gif" alt="Related tasks" width="159" height="27"><a href="tasks-92.htm"><br>
-</a><a href="tasks-94.htm">
-Discarding a repository location</a><a href="tasks-93.htm"><br>
-Refreshing the repository view</a><a href="tasks-96.htm"><br>
-Adding resources from a repository to the workbench</a>&nbsp;<a href="tasks-111.htm"><br>
-Creating a new stream</a>
+<p><img border="0" src="../images/ngrelt.gif" alt="Related tasks" width="159" height="27">
+<br><a href="tasks-94.htm">Discarding a CVS repository location</a>
+<br><a href="tasks-93.htm">Refreshing the repository view</a>
+<br><a href="tasks-96.htm">Checking out a project from a CVS repository</a>
+<br><a href="tasks-110.htm">Discovering branch and version tags</a>
 </p>
 
 <p>&nbsp;<br>
