--- a/bundles/org.eclipse.platform.doc.user/tasks/tasks-93.htm
+++ b/bundles/org.eclipse.platform.doc.user/tasks/tasks-93.htm
@@ -20,16 +20,15 @@ Press F5 on the keyboard</LI>
 </ul>
 
 
-<p><img border="0" src="../images/ngrelc.gif" alt="Related concepts" width="159" height="27"><br>
-<a href="../concepts/concepts-26.htm">Team programming</a> &nbsp;<a href="../concepts/concepts-27c.htm"><br>
-  CVS Repositories</a><a href="../concepts/concepts-27v.htm"><br>
-  CVS Repositories view</a><a href="../concepts/concepts-27b.htm"><br>
-  Branches</a></p>
+<p><img border="0" src="../images/ngrelc.gif" alt="Related concepts" width="159" height="27">
+<br><a href="../concepts/concepts-26.htm">Team programming with CVS</a>
+<br><a href="../concepts/concepts-27c.htm">CVS Repositories</a>
+<br><a href="../concepts/concepts-27v.htm">CVS Repositories view</a>
 
 
-<p><img border="0" src="../images/ngrelt.gif" alt="Related tasks" width="159" height="27"><a href="tasks-92.htm"><br>
-Creating a repository location</a><a href="tasks-94.htm"><br>
-Discarding a repository location</a>
+<p><img border="0" src="../images/ngrelt.gif" alt="Related tasks" width="159" height="27">
+<br><a href="tasks-92.htm">Creating a CVS repository location</a>
+<br><a href="tasks-94.htm">Discarding a CVS repository location</a>
 </p>
 
 <p>&nbsp;<br>
