fixed spelling errors

--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-101.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-101.htm
@@ -12,7 +12,7 @@
 <h1 CLASS="Head">
 Redoing a refactoring operation</h1>
 
-<div CLASS="Para">To redo a previously undone refactoring operatoin, select
+<div CLASS="Para">To redo a previously undone refactoring operation, select
 <b>Refactor</b>
 > <b>Redo</b> from the menu bar.</div>
 <img SRC="../images/ngrelc.gif" ALT="Related concepts" NOSAVE BORDER=0 height=27 width=159>
