--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-104.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-104.htm
@@ -21,7 +21,7 @@ Search, Outline, and Hierarchy views: The selected Java element in these
 views can be searched for declarations and references.</li>
 
 <li CLASS="Item">
-Package Expolorer view: Packages, Java compilation units, types and their
+Package Explorer view: Packages, Java compilation units, types and their
 members can be searched for declarations and references. If a compilation
 unit or CLA contains more than one type, a dialog prompts you to choose
 one.</li>
@@ -40,7 +40,7 @@ view or a method in the Outline view) or some text in a Java editor.</li>
 <li CLASS="Para">
 From the selection's pop-up menu, navigate to the available Java searches.
 After you select a search to perform, the search progress is shown in a
-dialog. Note: in the editor searches are avaiable under the&nbsp;<span CLASS="Label"><b>Search</span></b>
+dialog. Note: in the editor searches are available under the&nbsp;<span CLASS="Label"><b>Search</span></b>
 submenu.</li>
 
 <li CLASS="Para">
