--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-106.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-106.htm
@@ -14,7 +14,7 @@ Building a Java program</H1>
 A build command compiles workbench resources. A build command can be triggered in different ways:</P>
 <UL CLASS="UnorderedList">
 <LI CLASS="Item">
-Building automatically: If autobuilding is turned on (<b>Workbench</b> &gt; <b>Preferences</b>), then an incremental build occurs every time you save a modified workbench resource.</LI>
+Building automatically: If auto build is turned on (<b>Workbench</b> &gt; <b>Preferences</b>), then an incremental build occurs every time you save a modified workbench resource.</LI>
 <LI CLASS="Item">
 Building manually: You can perform a manual build using a project's pop-up menu or the 
 <b>Project</b> menu in the menu bar.</LI>
