--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-39.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-39.htm
@@ -34,7 +34,7 @@ Press <b>Ctrl+Shift+H</b> and select a type from the list in the resulting
 dialog (this works only for classes and interfaces) or</li>
 
 <li>
-Select <b>Navigate > Open Type in Hierachy</b> from the menu bar (this
+Select <b>Navigate > Open Type in Hierarchy</b> from the menu bar (this
 works only for classes and interfaces).</li>
 </ul>
 </ul>
