--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-40.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-40.htm
@@ -17,7 +17,7 @@
       from the editor's pop-up menu.</li>
   </ul>
   <p><b>Note:</b> If the selected Java element (or editor selection) is not a 
-    type or a compilation unit, the hiearchy will be open on the type in which 
+    type or a compilation unit, the hierarchy will be open on the type in which 
     the current selection lies.</p>
   <p><img width=159 height=27 id="_x0000_i1025" src="..\images\ngrelc.gif"
 alt="Related concepts" border=0></p>
