--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-43.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-43.htm
@@ -11,7 +11,7 @@
   <p class=para>You can use the Hierarchy view to override a method:</p>
   <p class=para> 1.<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
     </span> Open the type hierarchy for the type in which you want to add the 
-    overridding method.<br>
+    overriding method.<br>
     <b>Note:</b> It does not matter whether the subtypes, supertypes, or type 
     hierarchy is displayed.</p>
   <p class=para> 2.<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
