--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-44.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-44.htm
@@ -12,7 +12,7 @@
   <div class="para"> 1.<span style='font:7.0pt "Times New Roman"'></span> Open 
     the type hierarchy for the selected method's declaring type.</div>
   <p class="para"> 2.<span style='font:7.0pt "Times New Roman"'></span> Toggle 
-    the <b>Show the Subtype Hierachy</b> toolbar button on. 
+    the <b>Show the Subtype Hierarchy</b> toolbar button on. 
   <p class="para"> 3.<span style='font:7.0pt "Times New Roman"'></span> In the 
     list pane of the Hierarchy view, ensure that the&nbsp;<span 
 class=label><b>Lock View and Show Members in Hierarchy</b></span> button is toggled 
