--- a/bundles/org.eclipse.platform.doc.user/concepts/concepts-30b.htm
+++ b/bundles/org.eclipse.platform.doc.user/concepts/concepts-30b.htm
@@ -34,9 +34,9 @@ the synchronization process easier:</P>
   <dd> In this mode both incoming and outgoing changes are shown, and you can 
     both update and commit. You will remain in this mode with future synchronizations 
     until you close the view.&nbsp; The advantage to using this dual mode is you 
-    can do either task as you choose. The disadvantage is that performing a simultaneous 
-    bidirectional merge is often complicated. In addition, you risk accidentally 
-    committint a conflict when you meant to update to it. You can choose to always 
+    can do either task as you choose. The disadvantage is that performing a simultaneous
+    bi-directional merge is often complicated. In addition, you risk accidentally
+    committing a conflict when you meant to update to it. You can choose to always 
     use Incoming/Outgoing mode on the workbench preferences page (<b>Window&gt; 
     Preferences &gt; CVS</b>).</dd>
 </dl>
