cleaned up word tags

--- a/bundles/org.eclipse.jdt.doc.user/concepts/concepts-4.htm
+++ b/bundles/org.eclipse.jdt.doc.user/concepts/concepts-4.htm
@@ -2,45 +2,35 @@
 <HEAD>
 <META HTTP-EQUIV="Content-Type" CONTENT="text/html; charset=ISO-8859-1">
 <META HTTP-EQUIV="Content-Style-Type" CONTENT="text/css">
-
 <LINK REL="STYLESHEET" HREF="../book.css" CHARSET="ISO-8859-1" TYPE="text/css">
 <title>Java builder</title>
-
 </HEAD>
-<BODY BGCOLOR="#ffffff">
-<H1 CLASS="Head">
-Java builder</H1>
-<P CLASS="Para">
-The Java builder uses a compiler that implements the Java Language Specification.</P>
-<P CLASS="Para">
-Problems detected by the compiler are classified as either warnings or errors. The existence of a warning does not effect the execution of the program; the code executes as if it were written correctly.  Errors are problems that cannot be ignored. </P>
-<P CLASS="Para">
-The Java compiler can create CLASS files, even in presence of compilation errors. However, in the case of serious errors (for 
-example, references to inconsistent binaries, most likely related to an invalid class path setting), the Java builder does not produce any CLASS file.</P>
+<BODY BGCOLOR="#FFFFFF">
+<H1 CLASS="Head"> Java builder</H1>
+<P CLASS="Para"> The Java builder uses a compiler that implements the Java Language 
+  Specification.</P>
+<P CLASS="Para"> Problems detected by the compiler are classified as either warnings 
+  or errors. The existence of a warning does not effect the execution of the program; 
+  the code executes as if it were written correctly. Errors are problems that 
+  cannot be ignored. </P>
+<P CLASS="Para"> The Java compiler can create CLASS files, even in presence of 
+  compilation errors. However, in the case of serious errors (for example, references 
+  to inconsistent binaries, most likely related to an invalid class path setting), 
+  the Java builder does not produce any CLASS file.</P>
 <p><img border="0" src="../images/ngrelc.gif" alt="Related concepts" width="159" height="27"></p>
 <p><a href="cbuildcp.htm">Build class path</a><br>
-<a href="../concepts/concepts-1.htm">Java development tools (JDT)</a></p>
+  <a href="../concepts/concepts-1.htm">Java development tools (JDT)</a></p>
 <p><img border="0" src="../images/ngrelt.gif" alt="Related tasks" width="159" height="27"></p>
-<p dir="ltr">
-<a href="../tasks/tasks-113.htm">Adding a JAR file 
-to the build path</a><br>
-<a href="../tasks/tasks-112.htm">Adding a library 
-folder to the build path</a><br>
-<a href="../tasks/tasks-106.htm">Building a Java 
-program</a><br>
-<a href="../tasks/tasks-108.htm">Building 
-automatically</a><br>
-<a href="../tasks/tasks-109.htm">Building manually</a><br>
-<a href="../tasks/tasks-111.htm">Viewing and editing 
-a project's build path</a><br>
-<a href="../tasks/tasks-107.htm">Viewing compilation 
-errors and warnings</a><br>
-<a href="../tasks/tasks-110.htm">Working with build 
-paths</a></p>
-
-<p><br>
-<p>&nbsp;<a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0"></a>
+<p dir="ltr"> <a href="../tasks/tasks-113.htm">Adding a JAR file to the build 
+  path</a><br>
+  <a href="../tasks/tasks-112.htm">Adding a library folder to the build path</a><br>
+  <a href="../tasks/tasks-106.htm">Building a Java program</a><br>
+  <a href="../tasks/tasks-108.htm">Building automatically</a><br>
+  <a href="../tasks/tasks-109.htm">Building manually</a><br>
+  <a href="../tasks/tasks-111.htm">Viewing and editing a project's build path</a><br>
+  <a href="../tasks/tasks-107.htm">Viewing compilation errors and warnings</a><br>
+  <a href="../tasks/tasks-110.htm">Working with build paths</a></p>
+<p>&nbsp;<a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0"></a> 
 </p>
-
 </BODY>
 </HTML>
