--- a/bundles/org.eclipse.jdt.doc.user/concepts/concepts-3.htm
+++ b/bundles/org.eclipse.jdt.doc.user/concepts/concepts-3.htm
@@ -2,56 +2,42 @@
 <head>
 <LINK REL="STYLESHEET" HREF="../book.css" CHARSET="ISO-8859-1" TYPE="text/css">
 </head>
-
-<body bgcolor=white lang=EN-US link=blue vlink=blue style='tab-interval:.5in'>
-
-<div class=Section1>
-
-<h1>Java projects</h1>
-
-<p class=para>A Java project has an associated Java builder that can
-incrementally compile Java source files as they are changed. Each Java project
-maintains additional information about the type hierarchy and the references
-and declarations of Java elements. This information is constantly updated as
-the user changes the Java source code. It is not dependent on the builder.</p>
-
-<p class=para>You can organize Java projects in two different ways:</p>
-
-<ul style='margin-top:0in' type=disc>
- <li class=MsoNormal style='color:black;mso-list:l0 level1 lfo1;tab-stops:list .5in'><span
-     style='font-size:10.0pt;font-family:Arial'>Using the project as the source
-     container. This is the recommended organization for simple projects. <o:p></o:p></span></li>
- <li class=MsoNormal style='color:black;mso-list:l0 level1 lfo1;tab-stops:list .5in'><span
-     style='font-size:10.0pt;font-family:Arial'>Using source folders as the
-     source container. This is the recommended organization for more complex
-     projects. It allows you to subdivide packages into groups.<o:p></o:p></span></li>
-</ul>
-
-<p><img width=159 height=27 id="_x0000_i1025" src="..\images\ngrelc.gif"
+<body bgcolor=#FFFFFF lang=EN-US link=blue vlink=blue>
+<div class=Section1> 
+  <h1>Java projects</h1>
+  <p class=para>A Java project has an associated Java builder that can incrementally 
+    compile Java source files as they are changed. Each Java project maintains 
+    additional information about the type hierarchy and the references and declarations 
+    of Java elements. This information is constantly updated as the user changes 
+    the Java source code. It is not dependent on the builder.</p>
+  <p class=para>You can organize Java projects in two different ways:</p>
+  <ul type=disc>
+    <li class=MsoNormal style='color:black;'><span
+     style='font-size:10.0pt;font-family:Arial'>Using the project as the source 
+      container. This is the recommended organization for simple projects. </span></li>
+    <li class=MsoNormal style='color:black;'><span
+     style='font-size:10.0pt;font-family:Arial'>Using source folders as the source 
+      container. This is the recommended organization for more complex projects. 
+      It allows you to subdivide packages into groups.</span></li>
+  </ul>
+  <p><img width=159 height=27 id="_x0000_i1025" src="..\images\ngrelc.gif"
 alt="Related concepts" border=0></p>
-
-<p><a href="concepts-4.htm">Java builder</a><br>
-<a href="..\concepts\concepts-9.htm">Refactoring support</a></p>
-
-<p><img border=0 width=159 height=27 id="_x0000_i1026"
+  <p><a href="concepts-4.htm">Java builder</a><br>
+    <a href="..\concepts\concepts-9.htm">Refactoring support</a></p>
+  <p><img border=0 width=159 height=27 id="_x0000_i1026"
 src="..\images\ngrelt.gif" alt="Related tasks"></p>
-
-<p><a href="..\tasks\tasks-85.htm">Copying and moving Java elements</a><br>
-<a href="..\tasks\tasks-11.htm">Creating Java elements</a><br>
-<a href="..\tasks\tasks-13.htm">Creating a Java project as its own source
-container</a><br>
-<a href="..\tasks\tasks-14.htm">Creating a Java project with source folders</a><br>
-<a href="..\tasks\tasks-26.htm">Creating a new source folder</a><br>
-<a href="..\tasks\tasks-47.htm">Filtering elements</a><br>
-<a href="..\tasks\tasks-57.htm">Generating accessors</a><br>
-<a href="..\tasks\tasks-12.htm">Organizing Java projects</a><br>
-<a href="..\tasks\tasks-128.htm">Setting the launcher for a project</a></p>
+  <p><a href="..\tasks\tasks-85.htm">Copying and moving Java elements</a><br>
+    <a href="..\tasks\tasks-11.htm">Creating Java elements</a><br>
+    <a href="..\tasks\tasks-13.htm">Creating a Java project as its own source 
+    container</a><br>
+    <a href="..\tasks\tasks-14.htm">Creating a Java project with source folders</a><br>
+    <a href="..\tasks\tasks-26.htm">Creating a new source folder</a><br>
+    <a href="..\tasks\tasks-47.htm">Filtering elements</a><br>
+    <a href="..\tasks\tasks-57.htm">Generating accessors</a><br>
+    <a href="..\tasks\tasks-12.htm">Organizing Java projects</a><br>
+    <a href="..\tasks\tasks-128.htm">Setting the launcher for a project</a></p>
 </div>
-
-<p><br>
-<p>&nbsp;<a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0"></a>
+<p>&nbsp;<a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0"></a> 
 </p>
-
 </body>
-
 </html>
