--- a/bundles/org.eclipse.jdt.doc.user/concepts/concepts-5.htm
+++ b/bundles/org.eclipse.jdt.doc.user/concepts/concepts-5.htm
@@ -2,113 +2,86 @@
 <head>
 <LINK REL="STYLESHEET" HREF="../book.css" CHARSET="ISO-8859-1" TYPE="text/css">
 </head>
-
-<body bgcolor=white lang=EN-US link=blue vlink=blue style='tab-interval:.5in'>
-
-<div class=Section1>
-
-<h1>Java perspectives</h1>
-
-<p class=para>The Java development tools contribute the following perspectives
-to the workbench.</p>
-
-<h2>Java </h2>
-
-<p class=para>A perspective tuned for working with Java projects. It consists
-of the following views:</p>
-
-<ul style='margin-top:0in' type=disc>
- <li class=MsoNormal style='color:black;mso-list:l1 level1 lfo1;tab-stops:list .5in'><span
-     style='font-size:10.0pt;font-family:Arial'>Package Explorer<o:p></o:p></span></li>
- <li class=MsoNormal style='color:black;mso-list:l1 level1 lfo1;tab-stops:list .5in'><span
-     style='font-size:10.0pt;font-family:Arial'>Type Hierarchy<o:p></o:p></span></li>
- <li class=MsoNormal style='color:black;mso-list:l1 level1 lfo1;tab-stops:list .5in'><span
-     style='font-size:10.0pt;font-family:Arial'>Outline<o:p></o:p></span></li>
- <li class=MsoNormal style='color:black;mso-list:l1 level1 lfo1;tab-stops:list .5in'><span
-     style='font-size:10.0pt;font-family:Arial'>Search<o:p></o:p></span></li>
- <li class=MsoNormal style='color:black;mso-list:l1 level1 lfo1;tab-stops:list .5in'><span
-     style='font-size:10.0pt;font-family:Arial'>Console<o:p></o:p></span></li>
- <li class=MsoNormal style='color:black;mso-list:l1 level1 lfo1;tab-stops:list .5in'><span
-     style='font-size:10.0pt;font-family:Arial'>Tasks<o:p></o:p></span></li>
-</ul>
-
-<p class=MsoNormal><span style='font-size:10.0pt;font-family:Arial;color:black'><![if !supportEmptyParas]>&nbsp;<![endif]><o:p></o:p></span></p>
-
-<h2>Java Browsing</h2>
-
-<p class=para>A perspective tuned for working with Java projects. It consists
-of the following views:</p>
-
-<ul style='margin-top:0in' type=disc>
- <li class=MsoNormal style='color:black;mso-list:l1 level1 lfo1;tab-stops:list .5in'><span
-     style='font-size:10.0pt;font-family:Arial'>Projects<o:p></o:p></span></li>
- <li class=MsoNormal style='color:black;mso-list:l1 level1 lfo1;tab-stops:list .5in'><span
-     style='font-size:10.0pt;font-family:Arial'>Packages<o:p></o:p></span></li>
- <li class=MsoNormal style='color:black;mso-list:l1 level1 lfo1;tab-stops:list .5in'><span
-     style='font-size:10.0pt;font-family:Arial'>Types<o:p></o:p></span></li>
- <li class=MsoNormal style='color:black;mso-list:l1 level1 lfo1;tab-stops:list .5in'><span
-     style='font-size:10.0pt;font-family:Arial'>Members<o:p></o:p></span></li>
-</ul>
-
-<h2>Java Type Hierarchy</h2>
-
-<p class=para>This perspective allows you to explore the type hierarchy. It can
-be opened on types, compilation units, packages, projects or source folders and
-consists of the Hierarchy view and an editor.</p>
-
-<h2>Debug</h2>
-
-<p class=para>This perspective is tuned for debugging your Java program. It
-includes the following views.</p>
-
-<ul style='margin-top:0in' type=disc>
- <li class=MsoNormal style='color:black;mso-list:l0 level1 lfo2;tab-stops:list .5in'><span
-     style='font-size:10.0pt;font-family:Arial'>Debug<o:p></o:p></span></li>
- <li class=MsoNormal style='color:black;mso-list:l0 level1 lfo2;tab-stops:list .5in'><span
-     style='font-size:10.0pt;font-family:Arial'>Breakpoints<o:p></o:p></span></li>
- <li class=MsoNormal style='color:black;mso-list:l0 level1 lfo2;tab-stops:list .5in'><span
-     style='font-size:10.0pt;font-family:Arial'>Expressions<o:p></o:p></span></li>
- <li class=MsoNormal style='color:black;mso-list:l0 level1 lfo2;tab-stops:list .5in'><span
-     style='font-size:10.0pt;font-family:Arial'>Variables<o:p></o:p></span></li>
- <li class=MsoNormal style='color:black;mso-list:l0 level1 lfo2;tab-stops:list .5in'><span
-     style='font-size:10.0pt;font-family:Arial'>Display<o:p></o:p></span></li>
- <li class=MsoNormal style='color:black;mso-list:l1 level1 lfo1;tab-stops:list .5in'><span
-     style='font-size:10.0pt;font-family:Arial'>Outline<o:p></o:p></span></li>     
- <li class=MsoNormal style='color:black;mso-list:l0 level1 lfo2;tab-stops:list .5in'><span
-     style='font-size:10.0pt;font-family:Arial'>Console<o:p></o:p></span></li>
-</ul>
-
-<p><img width=159 height=27 id="_x0000_i1025" src="..\images\ngrelc.gif"
+<body bgcolor=#FFFFFF lang=EN-US link=blue vlink=blue>
+<div class=Section1> 
+  <h1>Java perspectives</h1>
+  <p class=para>The Java development tools contribute the following perspectives 
+    to the workbench.</p>
+  <h2>Java </h2>
+  <p class=para>A perspective tuned for working with Java projects. It consists 
+    of the following views:</p>
+  <ul type=disc>
+    <li class=MsoNormal style='color:black;'><span
+     style='font-size:10.0pt;font-family:Arial'>Package Explorer</span></li>
+    <li class=MsoNormal style='color:black;'><span
+     style='font-size:10.0pt;font-family:Arial'>Type Hierarchy</span></li>
+    <li class=MsoNormal style='color:black;'><span
+     style='font-size:10.0pt;font-family:Arial'>Outline</span></li>
+    <li class=MsoNormal style='color:black;'><span
+     style='font-size:10.0pt;font-family:Arial'>Search</span></li>
+    <li class=MsoNormal style='color:black;'><span
+     style='font-size:10.0pt;font-family:Arial'>Console</span></li>
+    <li class=MsoNormal style='color:black;'><span
+     style='font-size:10.0pt;font-family:Arial'>Tasks</span></li>
+  </ul>
+  <h2>Java Browsing</h2>
+  <p class=para>A perspective tuned for working with Java projects. It consists 
+    of the following views:</p>
+  <ul type=disc>
+    <li class=MsoNormal style='color:black;'><span
+     style='font-size:10.0pt;font-family:Arial'>Projects</span></li>
+    <li class=MsoNormal style='color:black;'><span
+     style='font-size:10.0pt;font-family:Arial'>Packages</span></li>
+    <li class=MsoNormal style='color:black;'><span
+     style='font-size:10.0pt;font-family:Arial'>Types</span></li>
+    <li class=MsoNormal style='color:black;'><span
+     style='font-size:10.0pt;font-family:Arial'>Members</span></li>
+  </ul>
+  <h2>Java Type Hierarchy</h2>
+  <p class=para>This perspective allows you to explore the type hierarchy. It 
+    can be opened on types, compilation units, packages, projects or source folders 
+    and consists of the Hierarchy view and an editor.</p>
+  <h2>Debug</h2>
+  <p class=para>This perspective is tuned for debugging your Java program. It 
+    includes the following views.</p>
+  <ul type=disc>
+    <li class=MsoNormal style='color:black;'><span
+     style='font-size:10.0pt;font-family:Arial'>Debug</span></li>
+    <li class=MsoNormal style='color:black;'><span
+     style='font-size:10.0pt;font-family:Arial'>Breakpoints</span></li>
+    <li class=MsoNormal style='color:black;'><span
+     style='font-size:10.0pt;font-family:Arial'>Expressions</span></li>
+    <li class=MsoNormal style='color:black;'><span
+     style='font-size:10.0pt;font-family:Arial'>Variables</span></li>
+    <li class=MsoNormal style='color:black;'><span
+     style='font-size:10.0pt;font-family:Arial'>Display</span></li>
+    <li class=MsoNormal style='color:black;'><span
+     style='font-size:10.0pt;font-family:Arial'>Outline</span></li>
+    <li class=MsoNormal style='color:black;'><span
+     style='font-size:10.0pt;font-family:Arial'>Console</span></li>
+  </ul>
+  <p><img width=159 height=27 id="_x0000_i1025" src="..\images\ngrelc.gif"
 alt="Related concepts" border=0></p>
-
-<p><a href="..\concepts\concepts-1.htm">Java development tools (JDT)</a><br>
-<a href="..\concepts\concepts-6.htm">Java views</a></p>
-
-<p><img border=0 width=159 height=27 id="_x0000_i1026"
+  <p><a href="..\concepts\concepts-1.htm">Java development tools (JDT)</a><br>
+    <a href="..\concepts\concepts-6.htm">Java views</a></p>
+  <p><img border=0 width=159 height=27 id="_x0000_i1026"
 src="..\images\ngrelt.gif" alt="Related tasks"></p>
-
-<p><a href="..\tasks\tasks-144.htm">Adding breakpoints</a><br>
-<a href="..\tasks\tasks-42.htm">Opening a type hierarchy in its own perspective</a><br>
-<a href="..\tasks\tasks-134.htm">Suspending threads</a></p>
-
-<p><img border=0 width=159 height=27 id="_x0000_i1027"
+  <p><a href="..\tasks\tasks-144.htm">Adding breakpoints</a><br>
+    <a href="..\tasks\tasks-42.htm">Opening a type hierarchy in its own perspective</a><br>
+    <a href="..\tasks\tasks-134.htm">Suspending threads</a></p>
+  <p><img border=0 width=159 height=27 id="_x0000_i1027"
 src="..\images\ngrelr.gif" alt="Related reference"></p>
-
-<p><a href="..\reference\ref-35.htm">Breakpoints view</a><br>
-<a href="..\reference\ref-45.htm">Console view</a><br>
-<a href="..\reference\ref-51.htm">Debug view</a><br>
-<a href="..\reference\ref-52.htm">Display view</a><br>
-<a href="..\reference\ref-56.htm">Expressions view</a><br>
-<a href="..\reference\ref-102.htm">Outline view for Java</a><br>
-<a href="..\reference\ref-90.htm">Package Explorer view</a><br>
-<a href="..\reference\ref-66.htm">Processes view</a><br>
-<a href="..\reference\ref-74.htm">Variables view</a></p>
+  <p><a href="..\reference\ref-35.htm">Breakpoints view</a><br>
+    <a href="..\reference\ref-45.htm">Console view</a><br>
+    <a href="..\reference\ref-51.htm">Debug view</a><br>
+    <a href="..\reference\ref-52.htm">Display view</a><br>
+    <a href="..\reference\ref-56.htm">Expressions view</a><br>
+    <a href="..\reference\ref-102.htm">Outline view for Java</a><br>
+    <a href="..\reference\ref-90.htm">Package Explorer view</a><br>
+    <a href="..\reference\ref-66.htm">Processes view</a><br>
+    <a href="..\reference\ref-74.htm">Variables view</a></p>
 </div>
-
-<p><br>
-<p>&nbsp;<a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0"></a>
+<p>&nbsp;<a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0"></a> 
 </p>
-
 </body>
-
 </html>
