--- a/bundles/org.eclipse.jdt.doc.user/concepts/concepts-6.htm
+++ b/bundles/org.eclipse.jdt.doc.user/concepts/concepts-6.htm
@@ -2,83 +2,61 @@
 <head>
 <LINK REL="STYLESHEET" HREF="../book.css" CHARSET="ISO-8859-1" TYPE="text/css">
 </head>
-
-<body bgcolor=white lang=EN-US link=blue vlink=blue style='tab-interval:.5in'>
-
-<div class=Section1>
-
-<h1>Java views</h1>
-
-<p class=para>The Java development tools contribute the following views to the
-workbench:</p>
-
-<h2>Package Explorer view</h2>
-
-<p class=para>The Package Explorer view that is shown by default in the Java
-perspective shows the Java element hierarchy of the Java projects in your
-workbench. It provides you with a Java-specific view of the resources shown in
-the Navigator. The element hierarchy is derived from the project's build class
-paths. </p>
-
-<p class=para>For each project, its source folders and referenced libraries are
-shown in the tree. You can open and browse the contents of both internal and
-external JAR files.</p>
-
-<h2>Hierarchy view</h2>
-
-<p class=para>The Type Hierarchy view offers three different ways to look at a
-class hierarchy:</p>
-
-<ul style='margin-top:0in' type=disc>
- <li class=MsoNormal style='color:black;mso-list:l0 level1 lfo1;tab-stops:list .5in'><span
-     class=label><span style='font-size:10.0pt;font-family:Arial'>Show the Type
-     Hierarchy</span></span><span style='font-size:10.0pt;font-family:Arial'>
-     displays the type hierarchy of a type.<o:p></o:p></span></li>
- <li class=MsoNormal style='color:black;mso-list:l0 level1 lfo1;tab-stops:list .5in'><span
-     class=label><span style='font-size:10.0pt;font-family:Arial'>Show the
-     Supertype Hierarchy</span></span><span style='font-size:10.0pt;font-family:
-     Arial'> displays the supertype hierarchy of a type.<o:p></o:p></span></li>
- <li class=MsoNormal style='color:black;mso-list:l0 level1 lfo1;tab-stops:list .5in'><span
-     class=label><span style='font-size:10.0pt;font-family:Arial'>Show the
-     Subtype Hierarchy</span></span><span style='font-size:10.0pt;font-family:
-     Arial'> displays the supertype hierarchy of a type.<o:p></o:p></span></li>
-</ul>
-
-<p class=MsoNormal><span style='font-size:10.0pt;font-family:Arial;color:black'><![if !supportEmptyParas]>&nbsp;<![endif]><o:p></o:p></span></p>
-
-<p><img width=159 height=27 id="_x0000_i1025" src="..\images\ngrelc.gif"
+<body bgcolor=#FFFFFF lang=EN-US link=blue vlink=blue>
+<div class=Section1> 
+  <h1>Java views</h1>
+  <p class=para>The Java development tools contribute the following views to the 
+    workbench:</p>
+  <h2>Package Explorer view</h2>
+  <p class=para>The Package Explorer view that is shown by default in the Java 
+    perspective shows the Java element hierarchy of the Java projects in your 
+    workbench. It provides you with a Java-specific view of the resources shown 
+    in the Navigator. The element hierarchy is derived from the project's build 
+    class paths. </p>
+  <p class=para>For each project, its source folders and referenced libraries 
+    are shown in the tree. You can open and browse the contents of both internal 
+    and external JAR files.</p>
+  <h2>Hierarchy view</h2>
+  <p class=para>The Type Hierarchy view offers three different ways to look at 
+    a class hierarchy:</p>
+  <ul type=disc>
+    <li class=MsoNormal style='color:black;'><span
+     class=label><span style='font-size:10.0pt;font-family:Arial'>Show the Type 
+      Hierarchy</span></span><span style='font-size:10.0pt;font-family:Arial'> 
+      displays the type hierarchy of a type.</span></li>
+    <li class=MsoNormal style='color:black;'><span
+     class=label><span style='font-size:10.0pt;font-family:Arial'>Show the Supertype 
+      Hierarchy</span></span><span style='font-size:10.0pt;font-family:
+     Arial'> displays the supertype hierarchy of a type.</span></li>
+    <li class=MsoNormal style='color:black;'><span
+     class=label><span style='font-size:10.0pt;font-family:Arial'>Show the Subtype 
+      Hierarchy</span></span><span style='font-size:10.0pt;font-family:
+     Arial'> displays the supertype hierarchy of a type.</span></li>
+  </ul>
+  <p><img width=159 height=27 id="_x0000_i1025" src="..\images\ngrelc.gif"
 alt="Related concepts" border=0></p>
-
-<p><a href="..\concepts\concepts-1.htm">Java development tools (JDT)</a><br>
-<a href="..\concepts\concepts-5.htm">Java perspectives</a></p>
-
-<p><img border=0 width=159 height=27 id="_x0000_i1026"
+  <p><a href="..\concepts\concepts-1.htm">Java development tools (JDT)</a><br>
+    <a href="..\concepts\concepts-5.htm">Java perspectives</a></p>
+  <p><img border=0 width=159 height=27 id="_x0000_i1026"
 src="..\images\ngrelt.gif" alt="Related tasks"></p>
-
-<p><a href="..\tasks\tasks-10.htm">Changing the appearance of the console view</a><br>
-<a href="..\tasks\tasks-38.htm">Changing the appearance of the Hierarchy view</a><br>
-<a href="..\tasks\tasks-130.htm">Launching a Java program</a></p>
-
-<p><img border=0 width=159 height=27 id="_x0000_i1027"
+  <p><a href="..\tasks\tasks-10.htm">Changing the appearance of the console view</a><br>
+    <a href="..\tasks\tasks-38.htm">Changing the appearance of the Hierarchy view</a><br>
+    <a href="..\tasks\tasks-130.htm">Launching a Java program</a></p>
+  <p><img border=0 width=159 height=27 id="_x0000_i1027"
 src="..\images\ngrelr.gif" alt="Related reference"></p>
-
-<p><a href="..\reference\ref-35.htm">Breakpoints view</a><br>
-<a href="..\reference\ref-45.htm">Console view</a><br>
-<a href="..\reference\ref-51.htm">Debug view</a><br>
-<a href="..\reference\ref-52.htm">Display view</a><br>
-<a href="..\reference\ref-56.htm">Expressions view</a><br>
-<a href="..\reference\ref-102.htm">Outline view for Java</a><br>
-<a href="..\reference\ref-90.htm">Package Explorer view</a><br>
-<a href="..\reference\ref-66.htm">Processes view</a><br>
-<a href="..\reference\ref-74.htm">Variables view</a><br>
-<a href="..\reference\ref-24.htm">Views and editors</a><br>
-<br>
+  <p><a href="..\reference\ref-35.htm">Breakpoints view</a><br>
+    <a href="..\reference\ref-45.htm">Console view</a><br>
+    <a href="..\reference\ref-51.htm">Debug view</a><br>
+    <a href="..\reference\ref-52.htm">Display view</a><br>
+    <a href="..\reference\ref-56.htm">Expressions view</a><br>
+    <a href="..\reference\ref-102.htm">Outline view for Java</a><br>
+    <a href="..\reference\ref-90.htm">Package Explorer view</a><br>
+    <a href="..\reference\ref-66.htm">Processes view</a><br>
+    <a href="..\reference\ref-74.htm">Variables view</a><br>
+    <a href="..\reference\ref-24.htm">Views and editors</a><br>
+    <br>
 </div>
-
-<p><br>
-<p>&nbsp;<a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0"></a>
+<p>&nbsp;<a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0"></a> 
 </p>
-
 </body>
-
 </html>
